# ml_automate

./: .gitignore  AUTOML_README.md  README.md  datasets.yaml  pipeline.yaml  pyproject.toml  requirements.txt  run_automl.py  run_iris_example.py  run_pipeline.py  setup.py  simple_iris_example.py
.github/workflows/: tests.yml
config/: automl_config.yaml  models.yaml  preprocessing_config.yaml
examples/: README.md  enhanced_automl_example.py  requirements.txt  run_automl_pipeline.py
infra/: Dockerfile.ingest  Dockerfile.prepare  Dockerfile.train
pipelines/: main_pipeline.py
src/: auto_ml.py  data_handling.py  data_ingestion.py  pipeline.py  train.py  utils.py
tests/: README.md  requirements-test.txt  test_automl.py  test_data_handling.py  test_pipeline.py
